# data_assembly

./: .gitignore  pyproject.toml
src/data_assembly/: assembly_summary.py  config.py  data_getter.py  fasta.py  pgap.py
templates/: template_pgap.yaml  template_submol.yaml
test/: test_fata.py
test/inputs/: all_n.fst  basic.fst  long_line_fasta.fst  multi_line.fst  n_successif.fst  seq_n_start_n_end.fst  seq_too_short.fst
test/results/: basic.fst  long_line_fasta.fst  multi_line.fst  seq_n_start_n_end.fst  seq_too_short.fst
