[project]
authors = [{name = "jfauchon", email = "jules.fauchon@gmail.com"}]
dependencies = []
name = "data_assembly"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
data_assembly = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.dependencies]
tqdm = ">=4.67.1,<5"

[dependency-groups]
test = ["pytest"]
